test/tests/operators/from_http/error_encode_no_body.txt
error: `encode` requires a `body`
 --> tests/operators/from_http/error_encode_no_body.tql:5:41
  |
5 | from_http "http://127.0.0.1:0/", encode="form" {
  |                                         ^^^^^^ 
  |
